ChangeLog for Privoxy
--------------------------------------------------------------------
*** Version 3.1.1  ***
- Major re-write of make install target. Add uninstall and
  install-strip targets. Add user and group testing to configure.
- Add an INSTALL file, and remove these instructions from README.
- Add a demoronizer filter, which fixes MS's abuse of std charsets
  (common cases anyway).

*** Version 3.0  ***

- Fixed Windows startmenu items, log window and tray icon menus.
- Added warning for bogus install target
- Added quicktime-kioskmode filter and improved frameset-borders
- Updated default.action based on latest feedback
- New PDF doc build process
- Add a user contrib module to cvs: 
  http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/ijbswa/contrib/

*** Version 2.9.18  ***

- Added workaround for IE bug that broke CGI interface
- Bugfix: String actions now reliably editable through CGI interface
- Three filters fixed (again!)
- Assorted small fixes and doc enhancements

*** Version 2.9.16  *** 

- Major revamp of default.action to get rid of years of cruft.
- Same for default.filter
- Re-design and major improvements to the CGI editor interface.
- Address spurious 'out of memory' error due to incorrect file permissions.
- Impose buffer limits while reading client and server headers.
- Better memory and CPU optimization.
- Add Conectiva Linux package.
- user-manual directive added to config for help links from within CGI
  editor.
- Multiple actions files can now be specified in config.
- Actions files are changed to: default.action, standard.action, and 
  user.action. user.action is for personal/local configuration.
- The usual many small and miscellaneous bug and security fixes.

*** Version 2.9.14 Beta *** 

- Fix Solaris compile problem (gateway.h and filters.h)
- Makefile fixes for Solaris, FreeBSD (?)
- Fix build failure where certain features were disabled.
- 'blocked-compact' template is removed. Various CGI improvements,