@@ -1,6 +1,6 @@
 ##############################################################################
 #
-# File        :  $Source: /cvsroot/ijbswa//current/templates/edit-actions-for-url,v $
+# File        :  $Source: /cvsroot/ijbswa/current/templates/edit-actions-for-url,v $
 #
 # Purpose     :  Template used to edit the actions associated with a
 #                particular section in an actions file.
@@ -32,6 +32,14 @@
 #
 # Revisions   :
 #    $Log: edit-actions-for-url,v $
+#    Revision 1.30  2002/09/05 16:12:02  oes
+#    Synced with stable branch:
+#       Revision 1.29.2.3  2002/08/23 02:22:53  hal9
+#       Fix a perl brain fart with <li> in comments.
+#
+#       Revision 1.29.2.1  2002/08/02 12:51:42  oes
+#       Added top submit button; Consistency with docs: Change default name for action from hide-referer to hide-referrer
+#
 #    Revision 1.29.2.3  2002/08/23 02:22:53  hal9
 #    Fix a perl brain fart with <li> in comments.
 #
@@ -797,7 +805,11 @@ function show_send_wafer_opts(tf)
         <input type="radio" name="set_image_blocker_mode" value="blank"
         onclick="set_image_blocker_param_disable(true)"
         id="set_image_blocker_mode_blank" @set-image-blocker-param-blank@><label 
-        for="set_image_blocker_mode_blank">Send a 1x1 transparent GIF</label><br>
+        for="set_image_blocker_mode_blank">Send a 1x1 transparent image</label><br>
+        <input type="radio" name="set_image_blocker_mode" value="custom"
+        onclick="set_image_blocker_param_disable(true)"
+        id="set_image_blocker_mode_custom" @set-image-blocker-param-custom@><label 
+        for="set_image_blocker_mode_custom">Send a custom image</label><br>
         <input type="radio" name="set_image_blocker_mode" value="CUSTOM"
         onclick="set_image_blocker_param_disable(false)"
         id="set_image_blocker_mode_set" @set-image-blocker-param-custom@><label
